--- a/correct_notebook.ipynb
+++ b/correct_notebook.ipynb
@@ -2,32 +2,46 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "4d8c6f45",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "This is a correct notebook\n"
-     ]
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "f31c5ce0-450a-4897-a327-0ff231172bb6",
+     "showTitle": false,
+     "title": ""
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "print(\"This is a correct notebook\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8408c108",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "ef7b775d-17b0-499b-bfa0-75bd73095819",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "application/vnd.databricks.v1+notebook": {
+   "dashboards": [],
+   "language": "python",
+   "notebookMetadata": {},
+   "notebookName": "correct_notebook",
+   "notebookOrigID": 75758643358393,
+   "widgets": {}
+  },
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
@@ -47,5 +61,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 5
+ "nbformat_minor": 0
 }
