--- a/broken_notebook.ipynb
+++ b/broken_notebook.ipynb
@@ -2,50 +2,63 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "f5833aa7",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "This is a broken notebook\n"
-     ]
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "c37cf408-6569-4d13-83fa-b1131c44c047",
+     "showTitle": false,
+     "title": ""
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "print(\"This is a broken notebook\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "da603e58",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'a': 'b'}\n"
-     ]
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "2797166a-4e24-445b-8c7b-563bcf67ded6",
+     "showTitle": false,
+     "title": ""
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "print({\"a\":\"b\"})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0c464979",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "3433e2fe-2eda-4c96-b241-2df2fbe969d2",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "application/vnd.databricks.v1+notebook": {
+   "dashboards": [],
+   "language": "python",
+   "notebookMetadata": {},
+   "notebookName": "broken_notebook",
+   "notebookOrigID": 1476125593703680,
+   "widgets": {}
+  },
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
@@ -65,5 +78,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 5
+ "nbformat_minor": 0
 }
