--- a/table 2023-03-30 18:42:53.ipynb
+++ b/table 2023-03-30 18:42:53.ipynb
@@ -47,7 +47,33 @@
     "df = pd.read_csv(bam.titanic_csv)\n",
     "\n",
     "fig = px.histogram(df, x='Sex', y=['Survived', 'Pclass'])\n",
-    "fig"
+    "fig\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "64c7d95b-2e42-4711-b2cd-6971e17324e8",
+     "showTitle": false,
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df"
    ]
   },
   {
@@ -57,7 +83,7 @@
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
      "inputWidgets": {},
-     "nuid": "64c7d95b-2e42-4711-b2cd-6971e17324e8",
+     "nuid": "2e385844-282a-4a53-bcec-5fd7e393449d",
      "showTitle": false,
      "title": ""
     }
