--- a/table 2023-03-30 18:42:53.ipynb
+++ b/table 2023-03-30 18:42:53.ipynb
@@ -156,7 +156,38 @@
  ],
  "metadata": {
   "application/vnd.databricks.v1+notebook": {
-   "dashboards": [],
+   "dashboards": [
+    {
+     "elements": [
+      {
+       "dashboardResultIndex": 0,
+       "elementNUID": "caadaa8c-1662-4057-89e9-a48fc0a14802",
+       "elementType": "command",
+       "guid": "0f7426c3-cfe7-49e7-91d8-7ce15b52f52b",
+       "options": null,
+       "position": {
+        "height": 6,
+        "width": 12,
+        "x": 0,
+        "y": 0,
+        "z": null
+       },
+       "resultIndex": null
+      }
+     ],
+     "globalVars": {},
+     "guid": "f4d3a10a-dd3f-47b2-830e-8fe3d252f01e",
+     "layoutOption": {
+      "grid": true,
+      "stack": true
+     },
+     "nuid": "602d021e-3413-4657-bee3-94b444e1074d",
+     "origId": 2572899644894928,
+     "title": "test",
+     "version": "DashboardViewV1",
+     "width": 1024
+    }
+   ],
    "language": "python",
    "notebookMetadata": {
     "pythonIndentUnit": 4
