--- a/table 2023-03-30 18:42:53.ipynb
+++ b/table 2023-03-30 18:42:53.ipynb
@@ -186,7 +186,17 @@
      "width": 1024
     },
     {
-     "elements": [],
+     "elements": [
+      {
+       "dashboardResultIndex": 0,
+       "elementNUID": "caadaa8c-1662-4057-89e9-a48fc0a14802",
+       "elementType": "command",
+       "guid": "993a8e9e-ab7c-429f-b69d-894571f9759c",
+       "options": null,
+       "position": null,
+       "resultIndex": null
+      }
+     ],
      "globalVars": {},
      "guid": "214c3177-81e6-4293-9e91-0123895ed022",
      "layoutOption": {
@@ -214,23 +224,7 @@
      "width": 1024
     },
     {
-     "elements": [
-      {
-       "dashboardResultIndex": 0,
-       "elementNUID": "caadaa8c-1662-4057-89e9-a48fc0a14802",
-       "elementType": "command",
-       "guid": "af6a9d9d-76b0-4af3-b612-957b4ae5b2e0",
-       "options": null,
-       "position": {
-        "height": 6,
-        "width": 12,
-        "x": 0,
-        "y": 0,
-        "z": null
-       },
-       "resultIndex": null
-      }
-     ],
+     "elements": [],
      "globalVars": {},
      "guid": "5be72280-f067-470b-9b8a-65b3ac044f3f",
      "layoutOption": {
@@ -240,6 +234,34 @@
      "nuid": "bc1129ea-2147-4ea6-9fee-6104cf2f0198",
      "origId": 3371917652796316,
      "title": "NEWNEW",
+     "version": "DashboardViewV1",
+     "width": 1024
+    },
+    {
+     "elements": [],
+     "globalVars": {},
+     "guid": "51f4a183-164b-4437-8371-d4170a455bd6",
+     "layoutOption": {
+      "grid": true,
+      "stack": true
+     },
+     "nuid": "ac6e3618-ba4d-4fcf-8ff9-4a4355ad255f",
+     "origId": 3371917652796317,
+     "title": "Untitled",
+     "version": "DashboardViewV1",
+     "width": 1024
+    },
+    {
+     "elements": [],
+     "globalVars": {},
+     "guid": "b880e4a2-55d1-40e2-854c-254af4045035",
+     "layoutOption": {
+      "grid": true,
+      "stack": true
+     },
+     "nuid": "2dfe7804-228b-49db-82ce-950221f084c2",
+     "origId": 3371917652796318,
+     "title": "3newnew",
      "version": "DashboardViewV1",
      "width": 1024
     }
