--- a/table 2023-03-30 18:42:53.ipynb
+++ b/table 2023-03-30 18:42:53.ipynb
@@ -84,7 +84,7 @@
     "\n",
     "\n",
     "\n",
-    "# "
+    "#"
    ]
   },
   {
@@ -238,7 +238,17 @@
      "width": 1024
     },
     {
-     "elements": [],
+     "elements": [
+      {
+       "dashboardResultIndex": 0,
+       "elementNUID": "caadaa8c-1662-4057-89e9-a48fc0a14802",
+       "elementType": "command",
+       "guid": "c80d1f0f-d496-43e3-8430-4f604aafe7bb",
+       "options": null,
+       "position": null,
+       "resultIndex": null
+      }
+     ],
      "globalVars": {},
      "guid": "51f4a183-164b-4437-8371-d4170a455bd6",
      "layoutOption": {
@@ -252,7 +262,17 @@
      "width": 1024
     },
     {
-     "elements": [],
+     "elements": [
+      {
+       "dashboardResultIndex": 0,
+       "elementNUID": "caadaa8c-1662-4057-89e9-a48fc0a14802",
+       "elementType": "command",
+       "guid": "def0acea-5f5b-45eb-b5c8-3a22f0f9f43b",
+       "options": null,
+       "position": null,
+       "resultIndex": null
+      }
+     ],
      "globalVars": {},
      "guid": "b880e4a2-55d1-40e2-854c-254af4045035",
      "layoutOption": {
