--- a/one_dashboard.ipynb
+++ b/one_dashboard.ipynb
@@ -72,15 +72,9 @@
        "dashboardResultIndex": 0,
        "elementNUID": "caadaa8c-1662-4057-89e9-a48fc0a14802",
        "elementType": "command",
-       "guid": "f8804b52-2faa-4db6-820b-c3c075d2227d",
+       "guid": "1d002c29-9f83-4e94-9fcd-528daf38e802",
        "options": null,
-       "position": {
-        "height": 6,
-        "width": 12,
-        "x": 0,
-        "y": 0,
-        "z": null
-       },
+       "position": null,
        "resultIndex": null
       }
      ],
@@ -97,7 +91,17 @@
      "width": 1024
     },
     {
-     "elements": [],
+     "elements": [
+      {
+       "dashboardResultIndex": 0,
+       "elementNUID": "caadaa8c-1662-4057-89e9-a48fc0a14802",
+       "elementType": "command",
+       "guid": "b0b0ba91-cee6-4872-bc2f-55263c01e8fe",
+       "options": null,
+       "position": null,
+       "resultIndex": null
+      }
+     ],
      "globalVars": {},
      "guid": "c1dbcf91-2bcd-4464-86e9-8955a16a11b2",
      "layoutOption": {
@@ -116,7 +120,7 @@
        "dashboardResultIndex": 0,
        "elementNUID": "caadaa8c-1662-4057-89e9-a48fc0a14802",
        "elementType": "command",
-       "guid": "1a8bbead-9168-4cdd-b46d-c4d54aae375d",
+       "guid": "9bf932ec-b121-4de6-b2cf-9da7c7023efc",
        "options": null,
        "position": null,
        "resultIndex": null
@@ -135,17 +139,7 @@
      "width": 1024
     },
     {
-     "elements": [
-      {
-       "dashboardResultIndex": 0,
-       "elementNUID": "caadaa8c-1662-4057-89e9-a48fc0a14802",
-       "elementType": "command",
-       "guid": "993a8e9e-ab7c-429f-b69d-894571f9759c",
-       "options": null,
-       "position": null,
-       "resultIndex": null
-      }
-     ],
+     "elements": [],
      "globalVars": {},
      "guid": "214c3177-81e6-4293-9e91-0123895ed022",
      "layoutOption": {
@@ -164,7 +158,7 @@
        "dashboardResultIndex": 0,
        "elementNUID": "caadaa8c-1662-4057-89e9-a48fc0a14802",
        "elementType": "command",
-       "guid": "38ca7025-daa9-4cda-a431-7959fd78f3d4",
+       "guid": "82a5c953-90da-4b26-abd7-e5ff546dec41",
        "options": null,
        "position": null,
        "resultIndex": null
@@ -188,7 +182,7 @@
        "dashboardResultIndex": 0,
        "elementNUID": "caadaa8c-1662-4057-89e9-a48fc0a14802",
        "elementType": "command",
-       "guid": "dd3e14d3-eb3d-451f-835e-559282cee588",
+       "guid": "043ac0c8-f4fe-4a92-9dd4-4aa468d66d6e",
        "options": null,
        "position": null,
        "resultIndex": null
@@ -207,17 +201,7 @@
      "width": 1024
     },
     {
-     "elements": [
-      {
-       "dashboardResultIndex": 0,
-       "elementNUID": "caadaa8c-1662-4057-89e9-a48fc0a14802",
-       "elementType": "command",
-       "guid": "c80d1f0f-d496-43e3-8430-4f604aafe7bb",
-       "options": null,
-       "position": null,
-       "resultIndex": null
-      }
-     ],
+     "elements": [],
      "globalVars": {},
      "guid": "51f4a183-164b-4437-8371-d4170a455bd6",
      "layoutOption": {
@@ -231,17 +215,7 @@
      "width": 1024
     },
     {
-     "elements": [
-      {
-       "dashboardResultIndex": 0,
-       "elementNUID": "caadaa8c-1662-4057-89e9-a48fc0a14802",
-       "elementType": "command",
-       "guid": "def0acea-5f5b-45eb-b5c8-3a22f0f9f43b",
-       "options": null,
-       "position": null,
-       "resultIndex": null
-      }
-     ],
+     "elements": [],
      "globalVars": {},
      "guid": "b880e4a2-55d1-40e2-854c-254af4045035",
      "layoutOption": {
@@ -251,6 +225,36 @@
      "nuid": "2dfe7804-228b-49db-82ce-950221f084c2",
      "origId": 3371917652796318,
      "title": "3newnew",
+     "version": "DashboardViewV1",
+     "width": 1024
+    },
+    {
+     "elements": [
+      {
+       "dashboardResultIndex": 0,
+       "elementNUID": "caadaa8c-1662-4057-89e9-a48fc0a14802",
+       "elementType": "command",
+       "guid": "4a6a1593-a391-4e0b-b94b-908cf2b26d47",
+       "options": null,
+       "position": {
+        "height": 6,
+        "width": 12,
+        "x": 0,
+        "y": 0,
+        "z": null
+       },
+       "resultIndex": null
+      }
+     ],
+     "globalVars": {},
+     "guid": "dd3a73e8-13fe-451e-a7f2-18fb47500723",
+     "layoutOption": {
+      "grid": true,
+      "stack": true
+     },
+     "nuid": "612bd8ea-1a41-4592-bafd-0047750d6850",
+     "origId": 4081705477047085,
+     "title": "oldold",
      "version": "DashboardViewV1",
      "width": 1024
     }
