remove some dashboard

--- a/one_dashboard.ipynb
+++ b/one_dashboard.ipynb
@@ -97,17 +97,7 @@
      "width": 1024
     },
     {
-     "elements": [
-      {
-       "dashboardResultIndex": 0,
-       "elementNUID": "caadaa8c-1662-4057-89e9-a48fc0a14802",
-       "elementType": "command",
-       "guid": "b0b0ba91-cee6-4872-bc2f-55263c01e8fe",
-       "options": null,
-       "position": null,
-       "resultIndex": null
-      }
-     ],
+     "elements": [],
      "globalVars": {},
      "guid": "5d71b7ec-3cb3-426f-ad36-dc96c068116c",
      "layoutOption": {
@@ -121,17 +111,7 @@
      "width": 1024
     },
     {
-     "elements": [
-      {
-       "dashboardResultIndex": 0,
-       "elementNUID": "caadaa8c-1662-4057-89e9-a48fc0a14802",
-       "elementType": "command",
-       "guid": "9bf932ec-b121-4de6-b2cf-9da7c7023efc",
-       "options": null,
-       "position": null,
-       "resultIndex": null
-      }
-     ],
+     "elements": [],
      "globalVars": {},
      "guid": "83b52fd4-8dde-4cff-b134-afe42d254f17",
      "layoutOption": {
@@ -145,17 +125,7 @@
      "width": 1024
     },
     {
-     "elements": [
-      {
-       "dashboardResultIndex": 0,
-       "elementNUID": "caadaa8c-1662-4057-89e9-a48fc0a14802",
-       "elementType": "command",
-       "guid": "f6755780-f42d-4b6a-9e09-bd31435987ad",
-       "options": null,
-       "position": null,
-       "resultIndex": null
-      }
-     ],
+     "elements": [],
      "globalVars": {},
      "guid": "73cb9392-b06c-432d-b58b-2d836d1727e4",
      "layoutOption": {
@@ -198,7 +168,7 @@
        "dashboardResultIndex": 0,
        "elementNUID": "caadaa8c-1662-4057-89e9-a48fc0a14802",
        "elementType": "command",
-       "guid": "043ac0c8-f4fe-4a92-9dd4-4aa468d66d6e",
+       "guid": "33f73140-9d13-48ad-b96d-a8d43372b1e0",
        "options": null,
        "position": null,
        "resultIndex": null
